fixed font size navbar take 2

--- a/src/Styles/navbar.css
+++ b/src/Styles/navbar.css
@@ -8,12 +8,12 @@ nav {
 
 
 .nav-text {
-    font-size: 1.6rem !important;
+    font-size: 22px;
     text-decoration: none;
     color:rgb(0, 0, 0);
 }
 .nav-logo{
-    font-size: 1.3rem !important;
+    font-size: 18px;
     text-shadow: 2px 2px 5px rgb(129, 129, 129);
 }
    
@@ -21,14 +21,19 @@ nav {
        color:rgb(93, 207, 241)
 }
 
-   
 .active{
-    font-size: 1.8rem !important;
+    font-size: 27px;
        color:rgb(255, 255, 255);
 }
    
    @media screen and (max-width: 900px) {
        .nav-text{
-           font-size: 1.5rem !important;
+           font-size: 18px;
+       }
+       .nav-logo{
+        font-size: 14px;
+       }
+       .active{
+           font-size: 23px;
        }
    }
