--- a/src/Styles/About.css
+++ b/src/Styles/About.css
@@ -1,8 +1,9 @@
 
 .About {
     padding: 40px;
-    font-family: Comfort;
+    font-family: ComfortBold;
     background-color: #BBD0FF;
+    color: #5C6FFF;
   }
   
   .header {
@@ -11,34 +12,30 @@
     padding: 20px 40px;
     border-radius: 20px;
     transition: transform 0.2s;
-    box-shadow: 0px 2px 8px 2px rgba(0, 0, 0, 0.75);
-    -webkit-box-shadow: 0px 2px 8px 2px rgba(0, 0, 0, 0.75);
-    -moz-box-shadow: 0px 2px 8px 2px rgba(0, 0, 0, 0.75);
+    box-shadow: 0px 2px 8px 2px whitesmoke;
+    -webkit-box-shadow: 0px 2px 8px 2px whitesmoke;
+    -moz-box-shadow: 0px 2px 8px 2px whitesmoke;
   }
   
   .header > p {
-    color: #929292;
-    margin-bottom: 20px;
-    font-size: 20px;
+    font-family: Tang;
+    color: Black;
+    margin-bottom: .5em;
+    font-size: .8em;
   }
   
   .header2 {
     background-color: white;
     display: flex;
-    padding-bottom: 20px;
     flex-direction: column;
     justify-content: center;
-    border-radius: 20px;
-    margin-top: 20px;
+    border-radius: 2em;
     text-align: center;
-    box-shadow: 0px 2px 8px 2px rgba(0, 0, 0, 0.75);
-    -webkit-box-shadow: 0px 2px 8px 2px rgba(0, 0, 0, 0.75);
-    -moz-box-shadow: 0px 2px 8px 2px rgba(0, 0, 0, 0.75);
+    box-shadow: 0px 2px 8px 2px whitesmoke;
+    -webkit-box-shadow: 0px 2px 8px 2px whitesmoke;
+    -moz-box-shadow: 0px 2px 8px 2px whitesmoke;
   }
   
-  #img {
-    width: 20px;
-  }
   
   .Carlos:hover {
     -ms-transform: scale(1.1);
@@ -68,13 +65,8 @@
     margin-bottom: 20px;
   }
   
-  .About > p {
-    font-size: 15px;
-    padding: 20px 40px;
-  }
-  
   .About h3 {
-    font-size: 32px;
+    font-size: 2em;
     margin-top: 40px;
   }
   
@@ -83,13 +75,13 @@
     justify-content: center;
     transition: transform 0.2s;
     margin: 0 auto;
-    margin-top: 40px;
+    margin-top: 1.5em;
     flex-wrap: wrap;
   }
   
   .About section div {
     border-radius: 8px;
-    box-shadow: 0px 3px 25px 0px rgba(0, 0, 0, 0.75);
+    box-shadow: 0px 3px 25px 0px grey;
     -webkit-box-shadow: 0px 3px 10px 0px rgba(0, 0, 0, 0.75);
     -moz-box-shadow: 0px 3px 10px 0px rgba(0, 0, 0, 0.75);
     margin: 20px;
@@ -110,17 +102,18 @@
   }
   
   .About section h5 {
-    font-size: 18px;
+    font-size: 1.6em;
     text-align: center;
     padding-bottom: 10px;
     margin: 20px 0px;
   }
   
   .About section p {
-    padding: 0 25px;
-    text-align: justify;
-    font-size: 20px;
-    color: #929292;
+    padding: 0 2.5em;
+    text-align: center;
+    font-size: 1.5em;
+    color: black;
+    font-family: Tang;
   }
   
   .github {
