--- a/src/Styles/question.css
+++ b/src/Styles/question.css
@@ -4,7 +4,7 @@
   display: flex;
   justify-content: center;
   flex-direction: column;
-  font-family: Comfort;
+  font-family: Coconut;
   color: #5c6fff;
 }
 
