--- a/src/Styles/videos.css
+++ b/src/Styles/videos.css
@@ -19,3 +19,14 @@
     border: 2px solid black;
     border-radius: 2%;
 }
+body{
+    background-color: #BBD0FF;
+}
+.iframe-video{
+    height: 290px;
+    width: 390px;
+}
+
+.li-video{
+    padding-bottom: 20px;
+}
