--- a/src/Styles/videos.css
+++ b/src/Styles/videos.css
@@ -4,6 +4,8 @@
     grid-template-columns: 1fr 1fr 1fr;
     column-gap: 50px;
     margin-top: 20px;
+    background-color: #bbd0ff;
+
 }
 
 .select-video-type{
@@ -17,16 +19,20 @@
     width: 17em;
     height: 17em;
     border: 2px solid black;
-    border-radius: 2%;
+    border-radius: 3%;
+
 }
-body{
-    background-color: #BBD0FF;
-}
+
 .iframe-video{
-    height: 290px;
-    width: 390px;
+    height: 15em;
+    width: auto;
+    border-radius: 5%;
 }
 
 .li-video{
     padding-bottom: 20px;
+}
+
+.videos-body{
+    background-color: #bbd0ff;
 }
