--- a/src/Styles/About.css
+++ b/src/Styles/About.css
@@ -61,13 +61,13 @@
   .header h1 {
     display: flex;
     justify-content: center;
-    font-size: 32px;
+    font-size: 1.1em;
     margin-bottom: 20px;
   }
   
   .About h3 {
     font-size: 2em;
-    margin-top: 40px;
+    margin-top: .6em;
   }
   
   .About section {
@@ -80,8 +80,8 @@
   }
   
   .About section div {
-    border-radius: 8px;
-    box-shadow: 0px 3px 25px 0px grey;
+    border-radius: 1em;
+    box-shadow: 0em .3em 2.5em 0em grey;
     -webkit-box-shadow: 0px 3px 10px 0px rgba(0, 0, 0, 0.75);
     -moz-box-shadow: 0px 3px 10px 0px rgba(0, 0, 0, 0.75);
     margin: 20px;
@@ -97,7 +97,7 @@
     height: auto;
     max-width: 250px;
     border-radius: 50%;
-    padding-top: 20px;
+    padding-top: 1em;
     align-self: center;
   }
   
