--- a/src/Styles/Home.css
+++ b/src/Styles/Home.css
@@ -13,14 +13,13 @@
   min-height: 25em;
   max-height: 25em;
   overflow-y: scroll;
-  display: grid;
-  grid-template-columns: repeat(3, 1fr);
+  display: flex !important;
   gap: 10px;
   margin: 3.7em;
   background-color: white;
   font-size: 0.8em;
   padding: 20px 40px;
-  border-radius: 20px;
+  border-radius: 0;
   transition: transform 0.2s;
   box-shadow: 0px 2px 8px 2px whitesmoke;
   -webkit-box-shadow: 0px 2px 8px 2px whitesmoke;
